# language-css-attoparsec

./: .gitignore  LICENSE  README  README.md  language-css-attoparsec.cabal  language-css.cabal
spec/: Main.hs
src/Language/Css/: Parse.hs  Pretty.hs
test/: CssGen.hs  Properties.hs  Unittests.hs  test-parser.hs
test/data/: block.css
