Name:          language-css
Version:       0.0.3
Cabal-Version: >= 1.8
License:       BSD3
License-file:  LICENSE
Author:        Anton Kholomiov
Synopsis:      CSS 2.1 syntax 
Description:   library for building and pretty printing CSS 2.1 code
Stability:     Experimental
Tested-With:   GHC==6.13.1
Build-Type:    Simple
Category:      Language
Maintainer:    <anton.kholomiov@gmail.com>

----------------------------------------------------------------------------------
Library
  Build-Depends:
        base >= 4, base < 5, pretty, text >= 0.11, attoparsec >= 0.10
  Hs-Source-Dirs:      src/
  Exposed-Modules:
        Language.Css.Syntax
        Language.Css.Pretty
        Language.Css.Parse
        Language.Css.Build
        Language.Css.Build.Idents
        Language.Css.Build.Tags
        Language.Css.Build.Attributes
        Language.Css.Build.Pseudos
  Other-Modules:



----------------------------------------------------------------------------------
Test-Suite test-parser
  Type:           exitcode-stdio-1.0
  Hs-Source-Dirs: test/
  Main-Is:        test-parser.hs
  Build-Depends:  base >= 4 && < 5,
                  test-framework >= 0.3.3,
                  test-framework-quickcheck2 >= 0.2.9,
                  QuickCheck >= 2.4.0.1,
                  attoparsec >= 0.10,
                  text >= 0.11,
                  language-css


